--- a/index.html
+++ b/index.html
@@ -10,23 +10,34 @@
 </head>
 
 <body>
+    <h1>ETCH-A-SKETCH</h1>
     <div class="container">
-
+        <label id="gridHeader" for="newGridForm">Change Grid Size</label>
+        <form action="#" id='newGridForm' return false>
+            <div id="gridWidth">
+                <label for="number">Width</label>
+                <input type="number" required id="width" min="1" max="100">
+            </div>
+            <div id="gridHeight">
+                <label for="number">Height</label>
+                <input type="number" required id="height" min="1" max="100">
+            </div>
+            <input id="submitBtn" type="submit" value="Create New Grid">
+        </form>
+        <div id="fancy-container">
+            <input type="radio" checked id="fancy-colors" name="color"
+                value="Fancy Colors">
+            <label for="fancy-colors">Random Colors</label>
+        </div>
+        <div id="select-container">
+            <input type="radio" id="select-color" name="color">
+            <select name="color-options" id="color-options">
+            </select>
+        </div>
+        <button id='reset'>Reset</button>
     </div>
-    <label for="newGridForm">Change Grid Size</label>
-    <form id='newGridForm'>
-        <label for="number">Width</label>
-        <input type="number" id="width">
-        <label for="number">Height</label>
-        <input type="number" id="height">
-        <input id="submitBtn" type="button" value="Create New Grid">
-        <input type="radio" checked id="fancy-colors" name="color"
-            value="Fancy Colors">
-        <label for="fancy-colors">Fancy Colors</label><br>
-        <input type="radio" id="black-color" name="color" value="black">
-        <label for="black">Black</label>
-    </form>
-    <button id='reset'>Reset</button>
+    <div class="gridContainer"></div>
+
 
 
     <script src="app.js"></script>
